Fixed a bug where the messages were not showing up correctly.

--- a/ThrowAwayProjects/wwwroot/css/forum.css
+++ b/ThrowAwayProjects/wwwroot/css/forum.css
@@ -37,6 +37,7 @@
     color: #999;
     display: none;
     float: right;
+    padding-top:6px;
 }
 
 .admin-color {
